<resources>
    <string name="app_name">SuperHeroApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_while_connecting_to_the_server">Error while connecting to the server</string>
    <string name="prefs_file">com.edbinns.superheroapp.PREFERENCE_FILE_KEY</string>


    <string name="name">Nombre Completo</string>
    <string name="username">Correo</string>
    <string name="password">Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="singin">Iniciar sesión</string>


    <string name="heroName">Nombre del héroe</string>
    <string name="hero">Superhéroe</string>
    <string name="publisher">Marvel/DC</string>
    <string name="alignment">Bueno/Malo</string>
    <string name="comic">Comic Description</string>
    <string name="releaseDate">dd/mm/yy</string>
    <string name="titleComic">Nombre del comic</string>
</resources>