<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context=".View.Activitys.LogInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="168dp"
            android:layout_height="150dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="100dp"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_face"
                tools:ignore="ContentDescription,HardcodedText,VectorDrawableCompat" />


        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="317dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:drawableStart="@drawable/ic_person"
            android:drawableLeft="@drawable/ic_person"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="317dp"
            android:layout_height="47dp"
            android:layout_marginTop="60dp"
            android:drawableStart="@drawable/ic_key"
            android:hint="@string/password"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName" />

        <Button
            android:id="@+id/button"
            android:layout_width="322dp"
            android:layout_height="49dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_desing"
            android:hint="@string/singin"
            android:textSize="@dimen/logintext"
            android:textColorHint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="317dp"
            android:layout_height="48dp"
            android:background="@drawable/border_desing"
            android:hint="@string/register"
            android:textColorHint="@color/colorAccent"
            android:textSize="@dimen/logintext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
            app:layout_constraintVertical_bias="0.234" />


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="58dp"
            android:layout_height="54dp"
            android:layout_marginStart="136dp"
            android:layout_marginLeft="136dp"
            android:layout_marginBottom="36dp"
            android:background="@color/colorPrimaryDark"
            app:srcCompat="@drawable/gmail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="67dp"
            android:layout_height="50dp"
            android:layout_marginEnd="136dp"
            android:layout_marginRight="136dp"
            android:layout_marginBottom="36dp"
            android:background="@color/colorPrimaryDark"
            app:srcCompat="@drawable/facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>